--- a/_posts/2019-02-18-post-0002.md
+++ b/_posts/2019-02-18-post-0002.md
@@ -7,6 +7,7 @@ comments: true
 author: Kushajveer Singh
 categories: [general]
 image: images/preview/post_002.png
+permalink: training-alexnet-with-tips-and-checks-on-how-train-cnns-practical-cnns-in-pytorch
 badges: false
 nb_path: _notebooks/2019-02-18-post-0002.ipynb
 layout: notebook
