--- a/_posts/2019-05-15-post-0006.md
+++ b/_posts/2019-05-15-post-0006.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [notes]
+permalink: how-to-become-an-expert-in-nlp-in-2019
 badges: false
 nb_path: _notebooks/2019-05-15-post-0006.ipynb
 layout: notebook
@@ -20,13 +21,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>In this post, I would focus on all of the theoretical knowledge you need for the latest trends in NLP. I made this reading list as I learned new concepts. For the resources, I include papers, blogs, videos.</p>
