--- a/_posts/2019-06-26-post-0010.md
+++ b/_posts/2019-06-26-post-0010.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [general]
+permalink: reproducing-cyclic-learning-papers-and-superconvergence
 badges: true
 nb_path: _notebooks/2019-06-26-post-0010.ipynb
 layout: notebook
