--- a/_posts/2020-05-13-post-0008.md
+++ b/_posts/2020-05-13-post-0008.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [notes]
+permalink: how-to-setup-personal-blog-using-ghost-and-github-hosting
 badges: false
 nb_path: _notebooks/2020-05-13-post-0008.ipynb
 layout: notebook
@@ -20,13 +21,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>{% include important.html content='I have moved to <a href="https://fastpages.fast.ai/">fastpages</a>. fastpages is the best option is you want to write jupyter notebook and share them as posts. All the details of setup are provided on the fastpages homepage.' %}</p>
