--- a/_posts/2020-07-10-post-0011.md
+++ b/_posts/2020-07-10-post-0011.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [general]
+permalink: deep-learning-model-initialization-in-detail
 badges: true
 nb_path: _notebooks/2020-07-10-post-0011.ipynb
 layout: notebook
