--- a/_posts/2020-08-31-post-0012.md
+++ b/_posts/2020-08-31-post-0012.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 author: Kushajveer Singh
 categories: [general]
+permalink: imagenet-dataset-advancements
 badges: false
 nb_path: _notebooks/2020-08-31-post-0012.ipynb
 layout: notebook
