--- a/_notebooks/2018-09-14-post-0001.ipynb
+++ b/_notebooks/2018-09-14-post-0001.ipynb
@@ -11,6 +11,7 @@
     "- author: Kushajveer Singh\n",
     "- categories: [general]\n",
     "- image: images/preview/post_001.jpeg\n",
+    "- permalink: theoretical-machine-learning-probalistic-and-statistical-math\n",
     "- badges: false"
    ]
   },
@@ -264,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
