--- a/_notebooks/2019-02-18-post-0002.ipynb
+++ b/_notebooks/2019-02-18-post-0002.ipynb
@@ -11,6 +11,7 @@
     "- author: Kushajveer Singh\n",
     "- categories: [general]\n",
     "- image: images/preview/post_002.png\n",
+    "- permalink: training-alexnet-with-tips-and-checks-on-how-train-cnns-practical-cnns-in-pytorch\n",
     "- badges: false"
    ]
   },
@@ -524,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
