--- a/_notebooks/2019-04-11-post-0003.ipynb
+++ b/_notebooks/2019-04-11-post-0003.ipynb
@@ -11,6 +11,7 @@
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
     "- image: images/preview/post_003.png\n",
+    "- permalink: weight-standardization-a-new-normalization-in-town\n",
     "- badges: false"
    ]
   },
@@ -284,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
