--- a/_notebooks/2019-04-17-post-0004.ipynb
+++ b/_notebooks/2019-04-17-post-0004.ipynb
@@ -11,6 +11,7 @@
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
     "- image: images/preview/post_004.jpeg\n",
+    "- permalink: spade-state-of-the-art-in-image-to-image-translation-by-nvidia\n",
     "- badges: false"
    ]
   },
@@ -534,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
