--- a/_notebooks/2019-05-06-post-0005.ipynb
+++ b/_notebooks/2019-05-06-post-0005.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
+    "- permalink: all-you-need-for-photorealistic-style-transfer-in-pytorch\n",
     "- badges: false"
    ]
   },
@@ -581,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
