--- a/_notebooks/2019-05-15-post-0006.ipynb
+++ b/_notebooks/2019-05-15-post-0006.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [notes]\n",
+    "- permalink: how-to-become-an-expert-in-nlp-in-2019\n",
     "- badges: false"
    ]
   },
@@ -167,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
