--- a/_notebooks/2019-06-26-post-0010.ipynb
+++ b/_notebooks/2019-06-26-post-0010.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [general]\n",
+    "- permalink: reproducing-cyclic-learning-papers-and-superconvergence\n",
     "- badges: true"
    ]
   },
@@ -1968,7 +1969,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1982,7 +1983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
