--- a/_notebooks/2019-11-11-post-0007.ipynb
+++ b/_notebooks/2019-11-11-post-0007.ipynb
@@ -11,6 +11,7 @@
     "- author: Kushajveer Singh\n",
     "- categories: [paper-implementation]\n",
     "- image: images/preview/post_007.png\n",
+    "- permalink: study-of-mish-activation-function-in-transfer-learning\n",
     "- badges: false"
    ]
   },
@@ -256,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -270,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
