--- a/_notebooks/2020-05-13-post-0008.ipynb
+++ b/_notebooks/2020-05-13-post-0008.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [notes]\n",
+    "- permalink: how-to-setup-personal-blog-using-ghost-and-github-hosting\n",
     "- badges: false"
    ]
   },
@@ -179,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
