--- a/_notebooks/2020-07-10-post-0011.ipynb
+++ b/_notebooks/2020-07-10-post-0011.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [general]\n",
+    "- permalink: deep-learning-model-initialization-in-detail\n",
     "- badges: true"
    ]
   },
@@ -1706,7 +1707,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1720,7 +1721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
