--- a/_notebooks/2020-08-31-post-0012.ipynb
+++ b/_notebooks/2020-08-31-post-0012.ipynb
@@ -10,6 +10,7 @@
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
     "- categories: [general]\n",
+    "- permalink: imagenet-dataset-advancements\n",
     "- badges: false"
    ]
   },
@@ -361,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
