--- a/_posts/2018-09-14-post-0001.md
+++ b/_posts/2018-09-14-post-0001.md
@@ -7,6 +7,7 @@ comments: true
 author: Kushajveer Singh
 categories: [general]
 image: images/preview/post_001.jpeg
+permalink: theoretical-machine-learning-probalistic-and-statistical-math
 badges: false
 nb_path: _notebooks/2018-09-14-post-0001.ipynb
 layout: notebook
