--- a/_posts/2020-11-07-post-0013.md
+++ b/_posts/2020-11-07-post-0013.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 hide: false
 search_exclude: true
+permalink: /what-can-neural-networks-reason-about
 categories: [graph]
 ---
 
