--- a/_posts/2021-03-16-post-0014.md
+++ b/_posts/2021-03-16-post-0014.md
@@ -6,6 +6,7 @@ toc: true
 comments: true
 hide: false
 search_exclude: true
+permalink: /complete-tutorial-on-how-to-use-hydra-in-machine-learning-projects
 categories: [general]
 ---
 
